Remove name from title in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- SEO Meta Tags -->
-    <title>Ankit Sahu - Full Stack | React, Node.js, AI/ML Portfolio</title>
+    <title> Full Stack | React, Node.js, AI/ML Portfolio</title>
     <meta name="description" content="Ankit Sahu - Full Stack Developer from Jabalpur. Expert in React, Node.js, AI/ML. View my projects and contact me for internship opportunities." />
     <meta name="keywords" content="Ankit Sahu, Full Stack Developer, React Developer, Node.js, Portfolio, Jabalpur, Web Developer, AI ML Engineer, Software Developer" />
     <meta name="author" content="Ankit Sahu" />
