Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:url" content="https://www.officialankit.online/" />
     <meta property="og:title" content="Ankit Sahu - Full Stack Developer Portfolio" />
     <meta property="og:description" content="Full Stack Developer specializing in React, Node.js, and AI/ML. Check out my projects and skills!" />
+    <meta name="google-site-verification" content="KanuiDE9mv8QQuEjZjp-WMRMcQuR5n4m3sHH_8mkVok" />
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.officialankit.online/" />
